# Varicose-Vein-Nanobot-Treatment

./: .gitignore  COMPLETION_BANNER.txt  NANOBOT_ARTICLE_SUMMARY.txt  Nanobots_Biological_Evidence.docx  Nanobots_Biological_Evidence.tex  PDF_GENERATION_COMPLETE.txt  README.md  generate_enhanced_pdf.py  generate_pdf.py  metro_train_correct_order.py  metro_train_enhanced.py  metro_train_final_correct.py  nanobots.bib  pyproject.toml  requirements.txt  run_flow_redirection_swarm_sim.py  run_nanobot_biological.py  run_nanobot_realistic.py  run_nanobot_sim.py  run_swarm_vein_sim.py  simple_test.py  test_sim.py
src/: __init__.py  run_demo.py  run_simulation.py  run_simulation_simple.py
src/simulation/: __init__.py  nanobot.py  vein_env.py
