[project]
name = "nanobot-simulation"
version = "0.1.0"
description = "Python PyBullet simulation of a nanobot clearing a varicose vein clog, with visualization to images/video."
authors = [{ name = "vRobot" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
notebook = ["jupyter", "matplotlib"]
arduino = ["pyserial"]

